--- a/PKM/pom.xml
+++ b/PKM/pom.xml
@@ -41,10 +41,10 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.boot</groupId>-->
+			<!--<artifactId>spring-boot-starter-security</artifactId>-->
+		<!--</dependency>-->
 
 		<dependency>
 			<groupId>org.hsqldb</groupId>
@@ -60,10 +60,10 @@
 
 
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.boot</groupId>-->
+			<!--<artifactId>spring-boot-starter-web</artifactId>-->
+		<!--</dependency>-->
 
 		<!--Configure the libraries necessary for JSP/Servlet in the  pom.xml file:-->
 		<dependency>
@@ -81,6 +81,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.security</groupId>-->
+			<!--<artifactId>spring-security-config</artifactId>-->
+			<!--<version>3.2.4.RELEASE</version>-->
+		<!--</dependency>-->
 	</dependencies>
 
 	<build>
@@ -91,11 +97,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
-
-
-
-
-
 </project>
