--- a/PKM/src/main/resources/application.properties
+++ b/PKM/src/main/resources/application.properties
@@ -8,4 +8,14 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.generate-ddl=true
 
-
+#EMAIL
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mestniutripmaribor@gmail.com
+spring.mail.password=mestniutrip1
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
