--- a/PKM/pom.xml
+++ b/PKM/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.javainuse</groupId>
-	<artifactId>boot-form-handling</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<groupId>Mestni-utrip</groupId>
+	<artifactId>Mestni-utrip</artifactId>
+	<version>7.5.2</version>
 	<packaging>jar</packaging>
 
-	<name>boot-form-handling</name>
-	<description>Demo project for Spring Boot</description>
+	<name>Mestni-utrip</name>
+	<description>Spletna stran Mestni utrip</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
